--- a/about.html
+++ b/about.html
@@ -86,21 +86,21 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3> Digital Real Estate EO</h3>
             <p class="fst-italic">
-              Executive Officer at DK Realty Philippines
+              Real Estate Digital Marketing Director
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Name:</strong> Rowena S. Herrera</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 40</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Butuan Agusan del Norte
+                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 47</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Butuan City
                   </li>
                   
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> wenplanters@gmail.com</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> rowenaherrera.dkrealty@gmail.com</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> 09123267766</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Website:</strong> www.dkrealty.ph</li>
                   
