--- a/about.html
+++ b/about.html
@@ -84,9 +84,9 @@
             <img src="assets/img/rowena.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3> Digital Real Estate EO</h3>
+            <h3> Real Estate Digital Marketing Director</h3>
             <p class="fst-italic">
-              Real Estate Digital Marketing Director
+              Executive Officer at DK Realty Philippines
             </p>
             <div class="row">
               <div class="col-lg-6">
